# Mail_guard.oss

./: .env.example  .gitignore  Dockerfile.bot  Dockerfile.frontend  Dockerfile.worker  FIXES_SUMMARY.md  HANDOFF.md  INTEGRATION_FIXES.md  MailGuard_MaxMVP_15Part.docx  docker-compose.yml  railway.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: Dockerfile  main.py  schemas.py
apps/bot/: Dockerfile  formatters.py  keyboards.py  main.py  session.py
apps/frontend/: app.js  index.html  nginx.conf  style.css
apps/worker/: Dockerfile  main.py
core/: api_keys.py  config.py  crypto.py  db.py  file_validator.py  identity.py  jwt_utils.py  key_hash.py  magic_links.py  models.py  otp.py  rate_limiter.py  redis_client.py  sanitizer.py  sender_rotation.py  smtp.py  templates.py  webhooks.py
db/migrations/: 001_sender_emails.sql  002_projects.sql  003_api_keys.sql  004_otp_records.sql  006_webhooks.sql  (+2 more)
sdks/python/: README.md  pyproject.toml
sdks/python/mailguard/: __init__.py  async_client.py  client.py  exceptions.py  magic.py  otp.py  types.py
sdks/python/tests/: test_magic.py  test_otp.py
templates/: magic_expired.html  magic_link_email.html  magic_link_email.txt  magic_verified.html  otp_email.html  otp_email.txt
tests/: test_auth.py  test_bot_admin_gate.py  test_bot_formatters.py  test_bot_keyboards.py  test_bot_part12.py  test_config.py  test_crypto.py  test_db.py  test_jwt.py  test_magic_routes.py  test_middleware.py  test_otp.py  test_otp_routes.py  test_rate_limiter.py  test_security.py  test_sender_rotation.py  test_smtp.py  test_webhooks.py
(+38 files in other folders)
