[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailguard-sdk"
version = "1.0.0"
description = "Official Python SDK for MailGuard OSS — self-hosted OTP and magic link authentication"
readme = "README.md"
license = "MIT"
authors = [{ name = "MailGuard OSS", email = "sdk@mailguard.dev" }]
requires-python = ">=3.9"
keywords = ["mailguard", "otp", "magic-link", "authentication", "email"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
async = ["aiohttp>=3.8"]
dev = ["pytest>=7.0", "responses>=0.23", "pytest-asyncio>=0.21", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/testxdevc4-design/Mail_guard.oss"
Repository = "https://github.com/testxdevc4-design/Mail_guard.oss"
Documentation = "https://github.com/testxdevc4-design/Mail_guard.oss/blob/main/sdks/python/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailguard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
